stateless-microservice-1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: statelessapp
spec: 
  selector: 
    matchLabels:
      app: statelessapp
  replicas: 2
  template: 
    metadata:
      labels: 
        app: statelessapp
    spec:
      containers:
      - name: statelessapp
        image: gowdaamith/statelessapp:v1
        ports: 
        - containerPort: 3000
        resources:
          limits:
            cpu: "0.5"
            memory: "100Mi"
          requests:
            cpu: "0.5"
            memory: "50Mi"
        startupProbe:
          httpGet:
            path: /health
            port: 3000
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 5
