stateless-microservice-1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: statelessappp-service
spec:
  selector:
    matchLabels: 
      app: statelessapp
    ports:
      - protocol: TCP
        port: 80
        targetPort: 3000
