stateless-microservice-1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: statelessapp-ingress
spec: 
  ingressClassName:
  rules:
  - http:
      paths:
      - path: /testpath`
        pathtype: Prefix
        backend: 
        service: 
          name: test
          port: 
            number: 80
